added kettlebell breakout exercises, sandbag, url printing options

--- a/Exercise Generator.ipynb
+++ b/Exercise Generator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -21,34 +21,75 @@
      "output_type": "stream",
      "text": [
       "generating mace workout\n",
-      "level:1\tR - gamma cast\n",
-      "level:1\tL - gamma cast\n",
-      "\turl: https://www.youtube.com/watch?v=ccifkBh2JSI&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=3\n",
-      "level:2\talternating - barbell transition to 360\n",
-      "\turl: https://www.youtube.com/watch?v=WQjHBHoC-MQ&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=4\n",
-      "level:2\tR - horizontal prayer transition to target squat\n",
-      "level:2\tL - horizontal prayer transition to target squat\n",
-      "\turl: https://www.youtube.com/watch?v=2yUz84zdBlk&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=13\n",
-      "level:2\tR - inverted side-to-side swings\n",
-      "level:2\tL - inverted side-to-side swings\n",
-      "\turl: https://www.youtube.com/watch?v=bLA2KSghSdc&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=8\n",
-      "level:2\tR - single arm alternating circles\n",
-      "level:2\tL - single arm alternating circles\n",
-      "\turl: https://www.youtube.com/watch?v=XWIFyifqSr8&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=18\n",
-      "level:2\tR - barbell transition to target squat\n",
-      "level:2\tL - barbell transition to target squat\n",
-      "\turl: https://www.youtube.com/watch?v=kZK8Eq6ka0U&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=14\n",
-      "level:4\tR - single arm inside continuous circle with alternate hand nunchuck flip\n",
-      "level:4\tL - single arm inside continuous circle with alternate hand nunchuck flip\n",
-      "\turl: https://www.youtube.com/watch?v=rCgrNJLsrBM&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=25\n",
-      "total time:13\n"
+      "level:1\tR - 360\n",
+      "level:1\tL - 360\n",
+      "\turl: https://youtu.be/TyZ8iYv6Ip0?list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh\n",
+      "level:2\talternating - paddle row to upper block with barbell transition\n",
+      "\turl: https://www.youtube.com/watch?v=4or7Sb8HyaU&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=12\n",
+      "level:2\talternating - prayer transition to 360\n",
+      "\turl: https://www.youtube.com/watch?v=0fjn0vidH2M&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=5\n",
+      "level:2\tR - single arm inside circle\n",
+      "level:2\tL - single arm inside circle\n",
+      "\turl: https://www.youtube.com/watch?v=MSt1cYAiLzI&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=16\n",
+      "level:3\talternating - simple martial spin with prayer transition\n",
+      "\turl: https://www.youtube.com/watch?v=p_VgqCIGb-E&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=11\n",
+      "level:3\tR - warrior stance backward circles\n",
+      "level:3\tL - warrior stance backward circles\n",
+      "\turl: https://www.youtube.com/watch?v=ZfGdlIsWKXQ&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=37\n",
+      "level:4\tR - single arm outside circle to alternate hand coin flip\n",
+      "level:4\tL - single arm outside circle to alternate hand coin flip\n",
+      "\turl: https://www.youtube.com/watch?v=qX0nE-3VMN0&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=20\n",
+      "level:4\tR - symmetrical stance alternating circles\n",
+      "level:4\tL - symmetrical stance alternating circles\n",
+      "\turl: https://www.youtube.com/watch?v=MsrcRGT0YzA&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=35\n",
+      "level:4\tR - single arm inside circle to alternate hand coin flip\n",
+      "level:4\tL - single arm inside circle to alternate hand coin flip\n",
+      "\turl: https://www.youtube.com/watch?v=opgqoNcD1Ds&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=19\n",
+      "level:5\tR - single arm alternating circle to alternate hand coin flip\n",
+      "level:5\tL - single arm alternating circle to alternate hand coin flip\n",
+      "\turl: https://www.youtube.com/watch?v=as46Zm9oibE&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=21\n",
+      "level:5\tR - single arm outside circle to same hand coin flip catch\n",
+      "level:5\tL - single arm outside circle to same hand coin flip catch\n",
+      "\turl: https://www.youtube.com/watch?v=UwR4uFqvUyY&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=23\n",
+      "level:5\tR - single arm inside mill with alt side flip catch (nunchuck flip to change back)\n",
+      "level:5\tL - single arm inside mill with alt side flip catch (nunchuck flip to change back)\n",
+      "\turl: https://www.youtube.com/watch?v=Hmk80iWQHjM&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=29\n",
+      "level:5\tR - single arm outside mill with alt side flip catch\n",
+      "level:5\tL - single arm outside mill with alt side flip catch\n",
+      "\turl: https://www.youtube.com/watch?v=aIxKwvzj9Hk&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=30\n",
+      "----------\n",
+      "without URLs:\n",
+      "level:1\tR - 360\n",
+      "level:1\tL - 360\n",
+      "level:2\talternating - paddle row to upper block with barbell transition\n",
+      "level:2\talternating - prayer transition to 360\n",
+      "level:2\tR - single arm inside circle\n",
+      "level:2\tL - single arm inside circle\n",
+      "level:3\talternating - simple martial spin with prayer transition\n",
+      "level:3\tR - warrior stance backward circles\n",
+      "level:3\tL - warrior stance backward circles\n",
+      "level:4\tR - single arm outside circle to alternate hand coin flip\n",
+      "level:4\tL - single arm outside circle to alternate hand coin flip\n",
+      "level:4\tR - symmetrical stance alternating circles\n",
+      "level:4\tL - symmetrical stance alternating circles\n",
+      "level:4\tR - single arm inside circle to alternate hand coin flip\n",
+      "level:4\tL - single arm inside circle to alternate hand coin flip\n",
+      "level:5\tR - single arm alternating circle to alternate hand coin flip\n",
+      "level:5\tL - single arm alternating circle to alternate hand coin flip\n",
+      "level:5\tR - single arm outside circle to same hand coin flip catch\n",
+      "level:5\tL - single arm outside circle to same hand coin flip catch\n",
+      "level:5\tR - single arm inside mill with alt side flip catch (nunchuck flip to change back)\n",
+      "level:5\tL - single arm inside mill with alt side flip catch (nunchuck flip to change back)\n",
+      "level:5\tR - single arm outside mill with alt side flip catch\n",
+      "level:5\tL - single arm outside mill with alt side flip catch\n",
+      "total time:23\n"
      ]
     }
    ],
    "source": [
-    "time_limit = 12          # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
+    "time_limit = 22        # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
     "level_lower_bound = 0    # lower complexity level\n",
-    "level_upper_bound = 4    # upper complexity level, assumed to go to 10 (chosen by me, so not scientifically or anything)\n",
+    "level_upper_bound = 5    # upper complexity level, assumed to go to 10 (chosen by me, so not scientifically or anything)\n",
     "only_isolation = False   # if true, only chooses L and R isloation exercises\n",
     "only_alternating = False # if true, only chooses alternating exercises\n",
     "order_by_level=True      # orders the output  list in increasing complexity\n",
@@ -73,40 +114,67 @@
      "output_type": "stream",
      "text": [
       "generating 1h club workout\n",
-      "level:1\tR - forward swing\n",
-      "level:1\tL - forward swing\n",
-      "\turl: \n",
-      "level:1\tR - inside circles\n",
       "level:1\tL - inside circles\n",
+      "level:1\tR - inside circles\n",
       "\turl: https://www.youtube.com/watch?v=0ZzoCasyoAM&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=6\n",
-      "level:1\tR - pullover\n",
-      "level:1\tL - pullover\n",
-      "\turl: \n",
-      "level:2\tR - swipe\n",
-      "level:2\tL - swipe\n",
-      "\turl: \n",
-      "level:2\tR - outside pendulum\n",
-      "level:2\tL - outside pendulum\n",
-      "\turl: https://www.youtube.com/watch?v=SchCGLfQbjI&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=12\n",
+      "level:2\tL - inside pendulum\n",
+      "level:2\tR - inside pendulum\n",
+      "\turl: https://www.youtube.com/watch?v=n-fzOSaOiKY&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=13\n",
       "level:2\talternating - forward swing hand to hand\n",
       "\turl: \n",
-      "level:3\talternating - inside mill forward swing transition\n",
+      "level:2\tL - outside pendulum\n",
+      "level:2\tR - outside pendulum\n",
+      "\turl: https://www.youtube.com/watch?v=SchCGLfQbjI&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=12\n",
+      "level:2\tL - swipe\n",
+      "level:2\tR - swipe\n",
       "\turl: \n",
+      "level:2\talternating - inside circle hand change\n",
+      "\turl: https://www.youtube.com/watch?v=AWh_AdoASRY&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=17\n",
       "level:3\talternating - outside mill outside circle transition\n",
       "\turl: \n",
-      "level:3\tR - alternating 180 degree pullover\n",
-      "level:3\tL - alternating 180 degree pullover\n",
-      "\turl: https://www.youtube.com/watch?v=9JeH7kTi1ys&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=21\n",
-      "level:3\tR - pendulum alternating mill\n",
+      "level:3\tL - outside mill\n",
+      "level:3\tR - outside mill\n",
+      "\turl: https://www.youtube.com/watch?v=MqVk-qZruus&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=11\n",
       "level:3\tL - pendulum alternating mill\n",
-      "\turl: \n",
-      "level:3\talternating - swipe forward swing transition\n",
+      "level:3\tR - pendulum alternating mill\n",
       "\turl: \n",
       "level:3\talternating - inside mill inside circle transition\n",
       "\turl: \n",
-      "level:3\talternating - continuous inside circle hand change\n",
-      "\turl: https://www.youtube.com/watch?v=XPZgv-vf7ME&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=19\n",
-      "total time:20\n"
+      "level:3\talternating - continuous outside circle hand change\n",
+      "\turl: https://www.youtube.com/watch?v=49iRIY2fMpE&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=20\n",
+      "level:3\talternating - swipe forward swing transition\n",
+      "\turl: \n",
+      "level:4\tL - crossbody clean\n",
+      "level:4\tR - crossbody clean\n",
+      "\turl: https://www.youtube.com/watch?v=HevZY3DmWhA&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=40\n",
+      "level:5\tL - stagger stance crossbody swipe\n",
+      "level:5\tR - stagger stance crossbody swipe\n",
+      "\turl: https://www.youtube.com/watch?v=Yc5kVA2hH1A&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=43\n",
+      "----------\n",
+      "without URLs:\n",
+      "level:1\tL - inside circles\n",
+      "level:1\tR - inside circles\n",
+      "level:2\tL - inside pendulum\n",
+      "level:2\tR - inside pendulum\n",
+      "level:2\talternating - forward swing hand to hand\n",
+      "level:2\tL - outside pendulum\n",
+      "level:2\tR - outside pendulum\n",
+      "level:2\tL - swipe\n",
+      "level:2\tR - swipe\n",
+      "level:2\talternating - inside circle hand change\n",
+      "level:3\talternating - outside mill outside circle transition\n",
+      "level:3\tL - outside mill\n",
+      "level:3\tR - outside mill\n",
+      "level:3\tL - pendulum alternating mill\n",
+      "level:3\tR - pendulum alternating mill\n",
+      "level:3\talternating - inside mill inside circle transition\n",
+      "level:3\talternating - continuous outside circle hand change\n",
+      "level:3\talternating - swipe forward swing transition\n",
+      "level:4\tL - crossbody clean\n",
+      "level:4\tR - crossbody clean\n",
+      "level:5\tL - stagger stance crossbody swipe\n",
+      "level:5\tR - stagger stance crossbody swipe\n",
+      "total time:22\n"
      ]
     }
    ],
@@ -132,31 +200,58 @@
       "level:1\tL - pullover\n",
       "level:1\tR - pullover\n",
       "\turl: https://www.youtube.com/watch?v=HsM0J39EmXg&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=3\n",
-      "level:1\tL - outside circles\n",
-      "level:1\tR - outside circles\n",
-      "\turl: https://www.youtube.com/watch?v=-MuseVIc0bg&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=2\n",
-      "level:1\tL - alternating pullover\n",
-      "level:1\tR - alternating pullover\n",
-      "\turl: https://www.youtube.com/watch?v=HsM0J39EmXg&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=3\n",
+      "level:2\tL - alternating circles\n",
+      "level:2\tR - alternating circles\n",
+      "\turl: https://www.youtube.com/watch?v=bIr0q5k9x8I&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=16\n",
       "level:2\tL - inside pendulum\n",
       "level:2\tR - inside pendulum\n",
       "\turl: https://www.youtube.com/watch?v=Maz36Iuixk4&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=9\n",
-      "level:2\tL - gamma cast\n",
-      "level:2\tR - gamma cast\n",
-      "\turl: https://www.youtube.com/watch?v=rjhwF50fyd8&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=5\n",
+      "level:3\tL - outside mill\n",
+      "level:3\tR - outside mill\n",
+      "\turl: \n",
       "level:3\tL - inside mill\n",
       "level:3\tR - inside mill\n",
       "\turl: \n",
-      "level:3\tL - half kneeling shield cast\n",
-      "level:3\tR - half kneeling shield cast\n",
-      "\turl: https://www.youtube.com/watch?v=vyLu0AFD-Mc&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=31\n",
       "level:3\tL - alternating pendulum\n",
       "level:3\tR - alternating pendulum\n",
       "\turl: https://www.youtube.com/watch?v=GULjXPS_ba4&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=14\n",
+      "level:3\tL - half kneeling shield cast\n",
+      "level:3\tR - half kneeling shield cast\n",
+      "\turl: https://www.youtube.com/watch?v=vyLu0AFD-Mc&list=PLk4oYPJ7TXKgVZH0qykDznDeaAcFImRuS&index=31\n",
+      "level:4\tL - alternating mill pendulum transition\n",
+      "level:4\tR - alternating mill pendulum transition\n",
+      "\turl: \n",
       "level:4\tL - alternating mill pullover transition\n",
       "level:4\tR - alternating mill pullover transition\n",
       "\turl: \n",
-      "total time:20\n"
+      "level:4\tL - alternating mill circle transition\n",
+      "level:4\tR - alternating mill circle transition\n",
+      "\turl: \n",
+      "----------\n",
+      "without URLs:\n",
+      "level:1\tL - inside circles\n",
+      "level:1\tR - inside circles\n",
+      "level:1\tL - pullover\n",
+      "level:1\tR - pullover\n",
+      "level:2\tL - alternating circles\n",
+      "level:2\tR - alternating circles\n",
+      "level:2\tL - inside pendulum\n",
+      "level:2\tR - inside pendulum\n",
+      "level:3\tL - outside mill\n",
+      "level:3\tR - outside mill\n",
+      "level:3\tL - inside mill\n",
+      "level:3\tR - inside mill\n",
+      "level:3\tL - alternating pendulum\n",
+      "level:3\tR - alternating pendulum\n",
+      "level:3\tL - half kneeling shield cast\n",
+      "level:3\tR - half kneeling shield cast\n",
+      "level:4\tL - alternating mill pendulum transition\n",
+      "level:4\tR - alternating mill pendulum transition\n",
+      "level:4\tL - alternating mill pullover transition\n",
+      "level:4\tR - alternating mill pullover transition\n",
+      "level:4\tL - alternating mill circle transition\n",
+      "level:4\tR - alternating mill circle transition\n",
+      "total time:22\n"
      ]
     }
    ],
@@ -168,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,20 +294,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[9, 8, 7, 6]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generating 2h club workout\n",
+      "level:2\tR - snatch\n",
+      "level:2\tL - snatch\n",
+      "\turl: https://www.youtube.com/watch?v=xQqCyl-2ixQ&list=PLk4oYPJ7TXKg4lvvabXEn9BI4c9i696kx&index=7\n",
+      "level:4\tR - Hunters squat/lunge same side load\n",
+      "level:4\tL - Hunters squat/lunge same side load\n",
+      "\turl: https://www.youtube.com/watch?v=LLt-wIkB_Xs&list=PLk4oYPJ7TXKg4lvvabXEn9BI4c9i696kx&index=98\n",
+      "----------\n",
+      "without URLs:\n",
+      "level:2\tR - snatch\n",
+      "level:2\tL - snatch\n",
+      "level:4\tR - Hunters squat/lunge same side load\n",
+      "level:4\tL - Hunters squat/lunge same side load\n",
+      "total movementst:4\n"
+     ]
     }
    ],
+   "source": [
+    "num_exercises = 2        # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
+    "level_lower_bound = 0    # lower complexity level\n",
+    "level_upper_bound = 5    # upper complexity level, assumed to go to 10 (chosen by me, so not scientifically or anything)\n",
+    "order_by_level=True      # orders the output  list in increasing complexity\n",
+    "randomize_RL = True      # randomize if R or L comes first (and then is consistent)\n",
+    "reverse_RL = False       # forces R to come first if true\n",
+    "print_urls = True        # prints urls to Wildman's videos for each of the movement patterns \n",
+    "\n",
+    "\n",
+    "\n",
+    "get_kb_exercises(num_exercises, level_lower_bound =level_lower_bound, level_upper_bound = level_upper_bound, \n",
+    "                order_by_level=order_by_level, randomize_RL = randomize_RL, reverse_RL=reverse_RL, print_urls=print_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
